Increase DevTools' GPU info watchdog to 20s on Linux Debug.

These bots are crashing with the 5s timeout.

BUG=796437
TBR=zmo@chromium.org, pfeldman@chromium.org

Change-Id: I2c2b9b491af93a7dcce86a27f6d5af68bb2ee81f
Reviewed-on: https://chromium-review.googlesource.com/835475
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Commit-Queue: Kenneth Russell <kbr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#525249}