content/browser/devtools/protocol/system_info_handler.cc
@@ -13,6 +13,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "base/command_line.h"
 #include "base/memory/ptr_util.h"
 #include "base/strings/utf_string_conversions.h"
+#include "build/build_config.h"
 #include "content/browser/gpu/compositor_util.h"
 #include "content/browser/gpu/gpu_data_manager_impl.h"
 #include "gpu/config/gpu_feature_type.h"
@@ -32,7 +33,12 @@ using SystemInfo::GPUInfo;
 using GetInfoCallback = SystemInfo::Backend::GetInfoCallback;
 
 // Give the GPU process a few seconds to provide GPU info.
+// Linux Debug builds need more time -- see Issue 796437.
+#if defined(OS_LINUX) && !defined(NDEBUG)
+const int kGPUInfoWatchdogTimeoutMs = 20000;
+#else
 const int kGPUInfoWatchdogTimeoutMs = 5000;
+#endif
 
 class AuxGPUInfoEnumerator : public gpu::GPUInfo::Enumerator {
  public:
